v1.0.4
U use rollup.js bundler to reduce dist package size(33% off)
U replace comments in English
A add get method to get logs in suitable time range

V1.0.3
F add auto-increase as key of IndexedDB, to fix error when logging in high frequency(old keypath timestamp may repeat)
U updated localStorage protocol's storage structer to save spaces

V1.0.2
A ability to choose protocol automatically
A custom database name

V1.0.1
D log upload api `reportTo` and `deploy` is removed,

V1.0.0
A log record
A log upload
A custom build, allow build with only protocols wanted