@@ -1,4 +1,4 @@
-// 抛出Error错误，并在错误描述前统一添加'Logline: '
+// throw out Errors, with global prefix 'Logline: ' ahead of err.message
 export function throwError(errMessage) {
     throw new Error('Logline: ' + errMessage);
 }
