@@ -1,22 +1,42 @@
 import IndexeddbLogger from './protocols/indexeddb';
-import WebsqlLogger from './protocols/websql';
 import LocalstorageLogger from './protocols/localstorage';
+import WebsqlLogger from './protocols/websql';
 import * as util from './lib/util';
 
 
 class Logline {
+    /**
+     * Logline constructor
+     * @constructor
+     * @param {String} namespace - namespace to use
+     * @return {Object Protocol Instance}
+     */
     constructor(namespace) {
         Logline._checkProtocol();
         return new Logline._protocol(namespace);
     }
 
-    // 选择并初始化协议
+    /**
+     * choose a protocol to initialize
+     * @method _initProtocol
+     * @private
+     * @static
+     * @param {Object Protocol Class} protocol - protocol to use, must under Logline.PROTOCOL
+     * @return {Object} Logline
+     */
     static _initProtocol(protocol) {
         Logline._protocol = protocol;
         Logline._protocol.init(Logline._database || 'logline');
     }
 
-    // 检查协议
+    /**
+     * check protocol
+     * if no protocol is chosen, will try to choose an available one automatically
+     * if none of the protocols is available, an error will be thrown
+     * @method _checkProtocol
+     * @private
+     * @static
+     */
     static _checkProtocol() {
         if (!Logline._protocol) {
             let protocols = Object.keys(Logline.PROTOCOL), protocol;
@@ -31,30 +51,82 @@ class Logline {
         }
     }
 
-    // 获取所有日志
-    static getAll(readyFn) {
+    /**
+     * get logs in range
+     * if from and end is not defined, will fetch full log
+     * @method get
+     * @static
+     * @param {String} [from] - time from
+     * @param {String} [to] - time end
+     * @param {Function} readyFn - function to call back with logs as parameter
+     */
+    static get(from, to, readyFn) {
+        var now = Date.now();
         Logline._checkProtocol();
-        Logline._protocol.all(logs => readyFn(logs));
+
+        switch (arguments.length) {
+            case 1:
+                readyFn = from;
+                from = undefined;
+                break;
+            case 2:
+                readyFn = to;
+                to = undefined;
+                break;
+            case 3:
+            default:
+                break;
+        }
+
+        Logline._protocol.get(from, to, readyFn);
     }
 
-    // 清理日志
+    /**
+     * read all logs
+     * @method all
+     * @static
+     * @param {Function} readyFn - function to call back with logs as parameter
+     */
+    static all(readyFn) {
+        Logline.get(readyFn);
+    }
+
+    /**
+     * clean up logs = keep limited logs
+     * @method keep
+     * @static
+     * @param {String} daysToMaintain - specialfy days to keep, support human readable format such as '3d', '.3'
+     * @return {Object} Logline
+     */
     static keep(daysToMaintain) {
         Logline._checkProtocol();
         Logline._protocol.keep(daysToMaintain);
         return this;
     }
 
-    // 清空日志并删除数据库
+    /**
+     * delete log database
+     * @method clean
+     * @static
+     * @return {Object} Logline
+     */
     static clean() {
         Logline._checkProtocol();
         Logline._protocol.clean();
         return this;
     }
 
-    // 选择一个日志协议
+    /**
+     * choose a protocol
+     * @method using
+     * @static
+     * @param {Object Protocol Class} protocol - wanted protocol, should be on of Logline.PROTOCOL
+     * @param {String} [database] - custome database name
+     * @return {Object} Logline
+     */
     static using(protocol, database) {
         // protocol unavailable is not allowed
-        if (-1 === [IndexeddbLogger, WebsqlLogger, LocalstorageLogger].indexOf(protocol)) {
+        if (-1 === [IndexeddbLogger, LocalstorageLogger, WebsqlLogger].indexOf(protocol)) {
             util.throwError('specialfied protocol ' + (protocol ? (protocol + ' ') : '') + 'is not available');
         }
 
@@ -68,6 +140,12 @@ class Logline {
         return this;
     }
 
+    /**
+     * specialfy a custome database name, in case of any conflicts
+     * @methd database
+     * @static
+     * @param {String} name - target database name
+     */
     static database(name) {
         Logline._database = name;
     }
@@ -75,8 +153,8 @@ class Logline {
 
 Logline.PROTOCOL = {
     INDEXEDDB: IndexeddbLogger,
-    WEBSQL: WebsqlLogger,
-    LOCALSTORAGE: LocalstorageLogger
+    LOCALSTORAGE: LocalstorageLogger,
+    WEBSQL: WebsqlLogger
 };
 
-module.exports = Logline;
+export default Logline;
